--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 CHROME_DRIVER_PATH=/usr/local/bin/chromedriver
+FLASK_APP=run.py
+FLASK_ENV=production
+SECRET_KEY=your-secure-secret-key
+OPENAI_API_KEY=your-openai-api-key
+CHROME_DRIVER_PATH=/usr/bin/chromedriver
+HEADLESS=True
