--- a/extractor_nginx.conf
+++ b/extractor_nginx.conf
@@ -6,28 +6,24 @@ server {
     error_log /var/log/nginx/extractor_error.log;
 
     location / {
-        proxy_pass http://unix:/tmp/gunicorn.sock;
+        proxy_pass http://127.0.0.1:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_connect_timeout 300s;
-        proxy_read_timeout 300s;
     }
 
     location /static {
         alias /var/www/extractor/app/static;
-        expires 30d;
-        add_header Cache-Control "public, no-transform";
     }
 
-    location /flask_session {
-        deny all;
-        return 404;
+    location /templates {
+        alias /var/www/extractor/app/templates;
     }
 
-    location /logs {
-        deny all;
-        return 404;
-    }
+    # Increase timeout for long-running scraping operations
+    proxy_connect_timeout 600;
+    proxy_send_timeout 600;
+    proxy_read_timeout 600;
+    send_timeout 600;
 } 
