--- a/extractor.service
+++ b/extractor.service
@@ -6,12 +6,13 @@ After=network.target
 User=www-data
 Group=www-data
 WorkingDirectory=/var/www/extractor
-Environment="PATH=/var/www/extractor/venv/bin"
+Environment="PATH=/var/www/extractor/venv/bin:/usr/local/bin:/usr/bin:/bin"
+Environment="PYTHONPATH=/var/www/extractor"
 Environment="FLASK_APP=run.py"
 Environment="FLASK_ENV=production"
-Environment="PYTHONPATH=/var/www/extractor"
-ExecStart=/var/www/extractor/venv/bin/gunicorn -c gunicorn_config.py run:app
+ExecStart=/var/www/extractor/venv/bin/python /var/www/extractor/venv/bin/gunicorn --config /var/www/extractor/gunicorn_config.py run:app
 Restart=always
+RestartSec=10
 
 [Install]
 WantedBy=multi-user.target 
