--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-Flask==2.0.1
+Flask==2.3.2
 Flask-Login==0.5.0
-Flask-Session==0.4.0
-selenium==4.18.1
-webdriver-manager==4.0.1
-python-dotenv==0.19.0
+Flask-Session==0.5.0
+selenium==4.9.1
+webdriver-manager==3.8.6
+gunicorn==20.1.0
+python-dotenv==1.0.0
 Werkzeug==2.0.1
 openai 
